# SekarNet

./: .env  .gitignore  .replit  DEBUG_REPORT.md  FINAL_DEBUG_SUMMARY.md  README.md  SETUP_QRIS.md  UX_IMPROVEMENTS_FINAL_REPORT.md  UX_IMPROVEMENTS_REPORT.md  package-lock.json  package.json  pyproject.toml  sekar_net.db  vite.config.ts
attached_assets/: Pasted-I-want-to-build-a-complete-website-and-mobile-web-application-for-an-Internet-Service-Provider-ISP--1747323186812.txt
backend/: .env  README.md  SETUP_QRIS_PYTHON.md  requirements.txt  run_qris.py  secret_key.txt  sekar_net.db  setup_fastapi_db.py
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/core/: cache.py  config.py  image.py  middleware.py  security.py
backend/app/db/: base.py  base_class.py  base_models.py  session.py
backend/app/docs/: docs.html
backend/app/models/: bill.py  installation_request.py  package.py  subscription.py  support_ticket.py  user.py
backend/app/schemas/: bill.py  installation_request.py  package.py  subscription.py  support_ticket.py  token.py  user.py
client/: cypress.config.ts  jest.config.js  jest.setup.js
client/cypress/plugins/: index.ts
client/cypress/support/: commands.ts  e2e.ts
client/src/: App.tsx  index.css  main.tsx
client/src/contexts/: AuthContext.tsx
public/assets/: README.md
server/: check-db.ts  db.ts  index.ts  migrate.ts  notifications.ts  reports.ts  routes.ts  setup-db-minimal.ts  setup-db-simple.ts  setup-db.ts  storage.ts  upload.ts  websocket.ts
shared/: schema.ts
tests/: api.test.ts
(+68 files in other folders)
